--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@codemasters/mousetrail",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "a lightweight, framework-independent mouse tracker library",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsup"
   },
