--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@codemasters/mousetrail",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "a lightweight, framework-independent mouse tracker library",
-  "main": "src/index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup"
   },
